# platformer-public

./: .gitignore  CMakeLists.txt  README.md
src/: Asset.cpp  Asset.h  AssetManager.cpp  AssetManager.h  Backend.cpp  Backend.h  Bat.cpp  Bat.h  CMakeLists.txt  CaveExit.cpp  CaveExit.h  ControlsScreen.cpp  ControlsScreen.h  Entity.cpp  Entity.h  Ghost.cpp  Ghost.h  Gold.cpp  Gold.h  Level.cpp  Level.h  LevelStats.cpp  LevelStats.h  Main.cpp  Map.h  Math.cpp  Math.h  Player.cpp  Player.h  Scene.cpp  Scene.h  ScoreKeeper.h  Skeleton.cpp  Skeleton.h  Sprite.cpp  Sprite.h  Stage.cpp  Stage.h  Timer.cpp  Timer.h  (+5 more)
